// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`default queue behavior 1`] = `
{
  "output": {
    "WING_TEST_RUNNER_FUNCTION_IDENTIFIERS": {
      "value": "[]",
    },
  },
  "resource": {
    "aws_sqs_queue": {
      "Queue": {
        "message_retention_seconds": 3600,
        "name": "Queue-c822c726",
        "visibility_timeout_seconds": 30,
      },
    },
  },
}
`;

exports[`default queue behavior 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Queue": {
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "Default",
                    "path": "root/Default/Queue/Default",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A distributed message queue",
                  "title": "Queue",
                },
                "id": "Queue",
                "path": "root/Default/Queue",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.17.0",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
              "cloud.TestRunner": {
                "children": {
                  "TestFunctionArns": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformOutput",
                      "version": "0.17.0",
                    },
                    "id": "TestFunctionArns",
                    "path": "root/Default/cloud.TestRunner/TestFunctionArns",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A suite of APIs for running tests and collecting results.",
                  "hidden": true,
                  "title": "TestRunner",
                },
                "id": "cloud.TestRunner",
                "path": "root/Default/cloud.TestRunner",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.2.70",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.17.0",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.17.0",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.17.0",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`queue name valid 1`] = `
{
  "output": {
    "WING_TEST_RUNNER_FUNCTION_IDENTIFIERS": {
      "value": "[]",
    },
  },
  "resource": {
    "aws_sqs_queue": {
      "The-Incredible_Queue-01": {
        "message_retention_seconds": 3600,
        "name": "The-Incredible_Queue-01-c8d1a14d",
        "visibility_timeout_seconds": 30,
      },
    },
  },
}
`;

exports[`queue name valid 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "The-Incredible_Queue-01": {
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "Default",
                    "path": "root/Default/The-Incredible_Queue-01/Default",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A distributed message queue",
                  "title": "Queue",
                },
                "id": "The-Incredible_Queue-01",
                "path": "root/Default/The-Incredible_Queue-01",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.17.0",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
              "cloud.TestRunner": {
                "children": {
                  "TestFunctionArns": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformOutput",
                      "version": "0.17.0",
                    },
                    "id": "TestFunctionArns",
                    "path": "root/Default/cloud.TestRunner/TestFunctionArns",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A suite of APIs for running tests and collecting results.",
                  "hidden": true,
                  "title": "TestRunner",
                },
                "id": "cloud.TestRunner",
                "path": "root/Default/cloud.TestRunner",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.2.70",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.17.0",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.17.0",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.17.0",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`queue with a consumer function 1`] = `"new (require(\\"[REDACTED]/wingsdk/src/shared-aws/function.inflight\\")).FunctionClient(process.env[\\"FUNCTION_NAME_524ac1be\\"], \\"root/Default/Queue-SetConsumer-a5ddcc\\")"`;

exports[`queue with a consumer function 2`] = `
{
  "output": {
    "WING_TEST_RUNNER_FUNCTION_IDENTIFIERS": {
      "value": "[]",
    },
  },
  "resource": {
    "aws_cloudwatch_log_group": {
      "Queue-SetConsumer-a5ddcc_CloudwatchLogGroup_EADF9144": {
        "name": "/aws/lambda/Queue-SetConsumer-a5ddcc-c8df8564",
        "retention_in_days": 30,
      },
    },
    "aws_iam_role": {
      "Queue-SetConsumer-a5ddcc_IamRole_7C348CA3": {
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"lambda.amazonaws.com\\"},\\"Effect\\":\\"Allow\\"}]}",
      },
    },
    "aws_iam_role_policy": {
      "Queue-SetConsumer-a5ddcc_IamRolePolicy_F4F2D33F": {
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":[\\"sqs:ReceiveMessage\\",\\"sqs:ChangeMessageVisibility\\",\\"sqs:GetQueueUrl\\",\\"sqs:DeleteMessage\\",\\"sqs:GetQueueAttributes\\"],\\"Resource\\":[\\"\${aws_sqs_queue.Queue.arn}\\"],\\"Effect\\":\\"Allow\\"}]}",
        "role": "\${aws_iam_role.Queue-SetConsumer-a5ddcc_IamRole_7C348CA3.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "Queue-SetConsumer-a5ddcc_IamRolePolicyAttachment_8C9267F8": {
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.Queue-SetConsumer-a5ddcc_IamRole_7C348CA3.name}",
      },
    },
    "aws_lambda_event_source_mapping": {
      "Queue_EventSourceMapping_8332F7DC": {
        "batch_size": 1,
        "event_source_arn": "\${aws_sqs_queue.Queue.arn}",
        "function_name": "\${aws_lambda_function.Queue-SetConsumer-a5ddcc.function_name}",
      },
    },
    "aws_lambda_function": {
      "Queue-SetConsumer-a5ddcc": {
        "architectures": [
          "arm64",
        ],
        "environment": {
          "variables": {
            "NODE_OPTIONS": "--enable-source-maps",
            "WING_FUNCTION_NAME": "Queue-SetConsumer-a5ddcc-c8df8564",
          },
        },
        "function_name": "Queue-SetConsumer-a5ddcc-c8df8564",
        "handler": "index.handler",
        "memory_size": 1024,
        "publish": true,
        "role": "\${aws_iam_role.Queue-SetConsumer-a5ddcc_IamRole_7C348CA3.arn}",
        "runtime": "nodejs18.x",
        "s3_bucket": "\${aws_s3_bucket.Code.bucket}",
        "s3_key": "\${aws_s3_object.Queue-SetConsumer-a5ddcc_S3Object_D67D45EB.key}",
        "timeout": "\${aws_sqs_queue.Queue.visibility_timeout_seconds}",
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
    },
    "aws_s3_bucket": {
      "Code": {
        "bucket_prefix": "code-c84a50b1-",
      },
    },
    "aws_s3_object": {
      "Queue-SetConsumer-a5ddcc_S3Object_D67D45EB": {
        "bucket": "\${aws_s3_bucket.Code.bucket}",
        "key": "<key>",
        "source": "<source>",
      },
    },
    "aws_sqs_queue": {
      "Queue": {
        "message_retention_seconds": 3600,
        "name": "Queue-c822c726",
        "visibility_timeout_seconds": 30,
      },
    },
  },
}
`;

exports[`queue with a consumer function 3`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Code": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.17.0",
                },
                "id": "Code",
                "path": "root/Default/Code",
              },
              "Queue": {
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "Default",
                    "path": "root/Default/Queue/Default",
                  },
                  "EventSourceMapping": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "EventSourceMapping",
                    "path": "root/Default/Queue/EventSourceMapping",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A distributed message queue",
                  "title": "Queue",
                },
                "id": "Queue",
                "path": "root/Default/Queue",
              },
              "Queue-SetConsumer-a5ddcc": {
                "children": {
                  "Asset": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformAsset",
                      "version": "0.17.0",
                    },
                    "id": "Asset",
                    "path": "root/Default/Queue-SetConsumer-a5ddcc/Asset",
                  },
                  "CloudwatchLogGroup": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "CloudwatchLogGroup",
                    "path": "root/Default/Queue-SetConsumer-a5ddcc/CloudwatchLogGroup",
                  },
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "Default",
                    "path": "root/Default/Queue-SetConsumer-a5ddcc/Default",
                  },
                  "IamRole": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "IamRole",
                    "path": "root/Default/Queue-SetConsumer-a5ddcc/IamRole",
                  },
                  "IamRolePolicy": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "IamRolePolicy",
                    "path": "root/Default/Queue-SetConsumer-a5ddcc/IamRolePolicy",
                  },
                  "IamRolePolicyAttachment": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "IamRolePolicyAttachment",
                    "path": "root/Default/Queue-SetConsumer-a5ddcc/IamRolePolicyAttachment",
                  },
                  "S3Object": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "S3Object",
                    "path": "root/Default/Queue-SetConsumer-a5ddcc/S3Object",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A cloud function (FaaS)",
                  "title": "Function",
                },
                "id": "Queue-SetConsumer-a5ddcc",
                "path": "root/Default/Queue-SetConsumer-a5ddcc",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.17.0",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
              "cloud.TestRunner": {
                "children": {
                  "TestFunctionArns": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformOutput",
                      "version": "0.17.0",
                    },
                    "id": "TestFunctionArns",
                    "path": "root/Default/cloud.TestRunner/TestFunctionArns",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A suite of APIs for running tests and collecting results.",
                  "hidden": true,
                  "title": "TestRunner",
                },
                "id": "cloud.TestRunner",
                "path": "root/Default/cloud.TestRunner",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.2.70",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.17.0",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.17.0",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.17.0",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`queue with custom retention 1`] = `
{
  "output": {
    "WING_TEST_RUNNER_FUNCTION_IDENTIFIERS": {
      "value": "[]",
    },
  },
  "resource": {
    "aws_sqs_queue": {
      "Queue": {
        "message_retention_seconds": 1800,
        "name": "Queue-c822c726",
        "visibility_timeout_seconds": 30,
      },
    },
  },
}
`;

exports[`queue with custom retention 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Queue": {
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "Default",
                    "path": "root/Default/Queue/Default",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A distributed message queue",
                  "title": "Queue",
                },
                "id": "Queue",
                "path": "root/Default/Queue",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.17.0",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
              "cloud.TestRunner": {
                "children": {
                  "TestFunctionArns": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformOutput",
                      "version": "0.17.0",
                    },
                    "id": "TestFunctionArns",
                    "path": "root/Default/cloud.TestRunner/TestFunctionArns",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A suite of APIs for running tests and collecting results.",
                  "hidden": true,
                  "title": "TestRunner",
                },
                "id": "cloud.TestRunner",
                "path": "root/Default/cloud.TestRunner",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.2.70",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.17.0",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.17.0",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.17.0",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`queue with custom timeout 1`] = `
{
  "output": {
    "WING_TEST_RUNNER_FUNCTION_IDENTIFIERS": {
      "value": "[]",
    },
  },
  "resource": {
    "aws_sqs_queue": {
      "Queue": {
        "message_retention_seconds": 3600,
        "name": "Queue-c822c726",
        "visibility_timeout_seconds": 30,
      },
    },
  },
}
`;

exports[`queue with custom timeout 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Queue": {
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "Default",
                    "path": "root/Default/Queue/Default",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A distributed message queue",
                  "title": "Queue",
                },
                "id": "Queue",
                "path": "root/Default/Queue",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.17.0",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
              "cloud.TestRunner": {
                "children": {
                  "TestFunctionArns": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformOutput",
                      "version": "0.17.0",
                    },
                    "id": "TestFunctionArns",
                    "path": "root/Default/cloud.TestRunner/TestFunctionArns",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A suite of APIs for running tests and collecting results.",
                  "hidden": true,
                  "title": "TestRunner",
                },
                "id": "cloud.TestRunner",
                "path": "root/Default/cloud.TestRunner",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.2.70",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.17.0",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.17.0",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.17.0",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`replace invalid character from queue name 1`] = `
{
  "output": {
    "WING_TEST_RUNNER_FUNCTION_IDENTIFIERS": {
      "value": "[]",
    },
  },
  "resource": {
    "aws_sqs_queue": {
      "TheIncredibleQueue": {
        "message_retention_seconds": 3600,
        "name": "The-Incredible-Queue-c8305287",
        "visibility_timeout_seconds": 30,
      },
    },
  },
}
`;

exports[`replace invalid character from queue name 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "The*Incredible$Queue": {
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "Default",
                    "path": "root/Default/The*Incredible$Queue/Default",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A distributed message queue",
                  "title": "Queue",
                },
                "id": "The*Incredible$Queue",
                "path": "root/Default/The*Incredible$Queue",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.17.0",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
              "cloud.TestRunner": {
                "children": {
                  "TestFunctionArns": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformOutput",
                      "version": "0.17.0",
                    },
                    "id": "TestFunctionArns",
                    "path": "root/Default/cloud.TestRunner/TestFunctionArns",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A suite of APIs for running tests and collecting results.",
                  "hidden": true,
                  "title": "TestRunner",
                },
                "id": "cloud.TestRunner",
                "path": "root/Default/cloud.TestRunner",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.2.70",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.17.0",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.17.0",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.17.0",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;
